--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/estilos.css">
+    <link rel="stylesheet" type="text/css" href="CSS/estilos.css">
     <link rel="shortcut icon" href="/imagens/logo.png" type="image/x-png"/>
-    <title>SPACE REIS</title>
+    <title>SPACE JANE</title>
 </head>
 
 <body>
     <div id="container">
 
         <header class="topo">
-            <div><img src="imagens/logo.png" alt="Logo Space Reis" id="logo"></div>
+            <div><img src="imagens/logo.png" alt="Logo Space Jane" id="logo"></div>
 
             <nav class="desktop">
                 <ul>
