--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -44,7 +44,7 @@
 
                 <article>
                     <img class="destaque" src="imagens/salao_beleza2.jpeg" alt="Salão">
-                    <div class="texto_principal">SPACE JABE Surge em 2010 um novo conceito em beleza e bem estar em SÃO
+                    <div class="texto_principal">SPACE JANE Surge em 2010 um novo conceito em beleza e bem estar em SÃO
                         PAULO,
                         onde já somos referência em qualidade e excelência.
                         Com uma nova e conceituada estrutura, queremos sempre proporcionar uma
